--- a/index.html
+++ b/index.html
@@ -6,73 +6,94 @@
 
   <style>
     body, input, button, textarea, label {
-      font-family: sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh; 
     }
 
     #sentence-form {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      gap: 1.4rem;
-      max-width: 600px;
-      margin: 0 auto 1.5rem;
-      text-align: center;
+      gap: 1rem;
+      text-align: center; 
+      
     }
 
+    /* Smaller heading */
     #sentence-form label {
-      font-size: 1.8rem;
+      font-size: 1.4rem;
     }
 
+   
     #input-sentence {
-      padding: 0.8rem;
-      font-size: 1rem;
-      width: 100%;
-      border-radius: 8px;
+      width: 300px;     
+      height: 60px;      
       box-sizing: border-box;
+      resize: none;      
     }
 
     #submit-btn {
-      padding: 0.6rem 1.2rem;
+      padding: 0.6rem 1.2rem; 
       font-size: 1rem;
       cursor: pointer;
-      border-radius: 8px;
-      border: none; 
+      border: 1px solid #000; 
+      background: none;       
     }
 
     #meme-result {
-      margin-top: 20px;
+      margin-top: 1rem;
       text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <form id="sentence-form">
-    <label for="input-sentence">Tell us about your day</label>
-    <textarea
-      id="input-sentence"
-      name="input-sentence"
-      rows="6"
-      placeholder="Example: I locked my keys in my car..."
-      required
-    ></textarea>
+  <div class="container">
+    <div>
+      <form id="sentence-form">
+        <label for="input-sentence">Tell us about your day!</label>
+        <textarea
+          id="input-sentence"
+          name="input-sentence"
+          placeholder="Example: I locked my keys in my car..."
+          required
+        ></textarea>
 
-    <button type="button" id="submit-btn">
-      GENERATE
-    </button>
-  </form>
+        <button type="button" id="submit-btn">
+          GENERATE
+        </button>
+      </form>
 
-  <div id="meme-result"></div>
+      <div id="meme-result"></div>
+    </div>
+  </div>
 
   <script>
     const BACKEND_URL = "https://nodejs-serverless-function-express-eight-navy.vercel.app/api/summarize-and-search.js";
 
-    document.getElementById("submit-btn").addEventListener("click", async () => {
+    const sentenceInput = document.getElementById("input-sentence");
+    sentenceInput.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        generateMeme();
+      }
+    });
+
+    document.getElementById("submit-btn").addEventListener("click", generateMeme);
+
+    async function generateMeme() {
       const sentenceForm = document.getElementById("sentence-form");
-      const sentenceInput = document.getElementById("input-sentence");
       const memeResultDiv = document.getElementById("meme-result");
 
       memeResultDiv.innerHTML = "";
+
       const userSentence = sentenceInput.value.trim();
       if (!userSentence) {
         alert("Please enter something!");
@@ -105,15 +126,13 @@
 
         const { imageUrl } = data;
         memeResultDiv.innerHTML = `
-          <img src="${imageUrl}" alt="Meme Image" 
-               style="max-width: 500px; border: 1px solid #ccc; border-radius: 8px; margin-top: 1rem;">
+          <img src="${imageUrl}" alt="Meme Image" style="max-width: 400px;">
         `;
       } catch (err) {
         console.error("Error:", err);
         memeResultDiv.innerHTML = `<p>An error occurred: ${err}</p>`;
       }
-    });
+    }
   </script>
-
 </body>
 </html>
