--- a/index.html
+++ b/index.html
@@ -3,50 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <title>Meme Finder</title>
-
   <style>
-    body, input, button, textarea, label {
-      font-family: Arial, Helvetica, sans-serif;
+    html, body {
       margin: 0;
       padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.2rem;
+      height: 100%;
     }
-
     .container {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
-      height: 100vh; 
+      height: 100vh;
+      padding-top: 10vh;
     }
-
     #sentence-form {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      text-align: center; 
-      
+      text-align: center;
     }
-
-    /* Smaller heading */
     #sentence-form label {
-      font-size: 1.4rem;
+      font-size: 1.3rem;
     }
-
-   
     #input-sentence {
-      width: 300px;     
-      height: 60px;      
+      width: 400px;
+      height: 30px;
       box-sizing: border-box;
-      resize: none;      
+      resize: none;
     }
-
     #submit-btn {
-      padding: 0.6rem 1.2rem; 
-      font-size: 1rem;
+      font-size: 0.9rem;
       cursor: pointer;
-      border: 1px solid #000; 
-      background: none;       
     }
-
     #meme-result {
       margin-top: 1rem;
       text-align: center;
@@ -54,82 +44,61 @@
   </style>
 </head>
 <body>
-
   <div class="container">
     <div>
       <form id="sentence-form">
-        <label for="input-sentence">Tell us about your day!</label>
+        <label for="input-sentence">Tell us about your day</label>
         <textarea
           id="input-sentence"
           name="input-sentence"
           placeholder="Example: I locked my keys in my car..."
           required
         ></textarea>
-
-        <button type="button" id="submit-btn">
-          GENERATE
-        </button>
+        <button type="button" id="submit-btn">GENERATE</button>
       </form>
-
       <div id="meme-result"></div>
     </div>
   </div>
 
   <script>
     const BACKEND_URL = "https://nodejs-serverless-function-express-eight-navy.vercel.app/api/summarize-and-search.js";
-
+    const sentenceForm = document.getElementById("sentence-form");
     const sentenceInput = document.getElementById("input-sentence");
+    const memeResultDiv = document.getElementById("meme-result");
     sentenceInput.addEventListener("keydown", (e) => {
       if (e.key === "Enter") {
         e.preventDefault();
         generateMeme();
       }
     });
-
     document.getElementById("submit-btn").addEventListener("click", generateMeme);
-
     async function generateMeme() {
-      const sentenceForm = document.getElementById("sentence-form");
-      const memeResultDiv = document.getElementById("meme-result");
-
       memeResultDiv.innerHTML = "";
-
       const userSentence = sentenceInput.value.trim();
       if (!userSentence) {
         alert("Please enter something!");
         return;
       }
-
       memeResultDiv.innerHTML = "<p>Loading...</p>";
-
       try {
         const response = await fetch(BACKEND_URL, {
           method: "POST",
-          headers: {
-            "Content-Type": "text/plain"
-          },
+          headers: { "Content-Type": "text/plain" },
           body: JSON.stringify({ userSentence })
         });
-
         if (!response.ok) {
           memeResultDiv.innerHTML = `<p>Request failed: ${response.status} ${response.statusText}</p>`;
           return;
         }
-
         const data = await response.json();
         if (data.error) {
           memeResultDiv.innerHTML = `<p>Error: ${data.error.message || data.error}</p>`;
           return;
         }
-
         sentenceForm.style.display = "none";
-
         const { imageUrl } = data;
-        memeResultDiv.innerHTML = `
-          <img src="${imageUrl}" alt="Meme Image" style="max-width: 400px;">
-        `;
+        memeResultDiv.innerHTML = `<img src="${imageUrl}" alt="Meme Image" style="max-width: 400px;">`;
       } catch (err) {
-        console.error("Error:", err);
         memeResultDiv.innerHTML = `<p>An error occurred: ${err}</p>`;
       }
     }
