--- a/index.html
+++ b/index.html
@@ -4,42 +4,11 @@
   <meta charset="UTF-8">
   <title>Meme Finder</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 1.2rem;
-      height: 100%;
-    }
     .container {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: center;
       height: 100vh;
-      padding-top: 10vh;
-    }
-    #sentence-form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      text-align: center;
-    }
-    #sentence-form label {
-      font-size: 1.3rem;
-    }
-    #input-sentence {
-      width: 400px;
-      height: 30px;
-      box-sizing: border-box;
-      resize: none;
-    }
-    #submit-btn {
-      font-size: 0.9rem;
-      cursor: pointer;
-    }
-    #meme-result {
-      margin-top: 1rem;
-      text-align: center;
     }
   </style>
 </head>
@@ -47,13 +16,15 @@
   <div class="container">
     <div>
       <form id="sentence-form">
-        <label for="input-sentence">Tell us about your day</label>
+        <label for="input-sentence">Tell us about your day</label><br><br>
         <textarea
           id="input-sentence"
           name="input-sentence"
+          rows="2"
+          cols="40"
           placeholder="Example: I locked my keys in my car..."
           required
-        ></textarea>
+        ></textarea><br><br>
         <button type="button" id="submit-btn">GENERATE</button>
       </form>
       <div id="meme-result"></div>
@@ -65,13 +36,16 @@
     const sentenceForm = document.getElementById("sentence-form");
     const sentenceInput = document.getElementById("input-sentence");
     const memeResultDiv = document.getElementById("meme-result");
+
     sentenceInput.addEventListener("keydown", (e) => {
       if (e.key === "Enter") {
         e.preventDefault();
         generateMeme();
       }
     });
+
     document.getElementById("submit-btn").addEventListener("click", generateMeme);
+
     async function generateMeme() {
       memeResultDiv.innerHTML = "";
       const userSentence = sentenceInput.value.trim();
