--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
     /* Single-row input form (textarea) with bigger placeholder text */
     #input-sentence {
       display: block;
-      width: 450px;       /* longer horizontally */
-      height: 40px;       /* just one row high */
+      width: 600px;       /* longer horizontally */
+      height: 350px;       /* just one row high */
       box-sizing: border-box;
       line-height: 40px;  /* vertically center the text inside */
-      font-size: 1.5rem;  /* matches label size for typed text */
-      text-align: center; /* horizontally center typed text */
+      font-size: 1.2rem;  /* matches label size for typed text */
+      text-align: left; /* horizontally center typed text */
       resize: none;
     }
 
     /* Placeholder styling (bigger font, vertically aligned) */
     #input-sentence::placeholder {
-      font-size: 1.5rem; 
-      text-align: center;
+      font-size: 1.2rem; 
+      text-align: left;
     }
 
     #submit-btn {
-      font-size: 1.2rem;
+      font-size: 1.0rem;
       margin-top: 1rem;
       cursor: pointer;
     }
