--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       margin: 0;
       padding: 0;
     }
-
+  <style>
+  body
+    font-family: ‘Inter’
+  }
     .wrapper {
       text-align: center;
     }
@@ -26,7 +29,7 @@
     #input-sentence {
       display: block;
       width: 600px;       
-      height: 40px;       
+      height: 50px;       
       box-sizing: border-box;
       line-height: 40px;  
       font-size: 1.0rem;  
