--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     #sentence-form label {
       display: block;
       font-size: 1.5rem;
-      margin-bottom: 1rem;
+      margin-bottom: 1.2rem;
     }
 
     #input-sentence {
       display: block;
       width: 600px;       
-      height: 45px;       
+      height: 40px;       
       box-sizing: border-box;
       line-height: 40px;  
       font-size: 1.0rem;  
@@ -41,7 +41,7 @@
 
     #submit-btn {
       font-size: 0.8rem;
-      margin-top: 1rem;
+      margin-top: 1.4rem;
       cursor: pointer;
     }
 
@@ -61,7 +61,7 @@
           placeholder="Ex: I locked my keys in my car..."
           required
         ></textarea>
-        <button type="button" id="submit-btn">GENERATE</button>
+        <button type="button" id="submit-btn">Generate</button>
       </form>
       <div id="meme-result"></div>
     </div>
