--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       width: 600px;       
       height: 40px;       
       box-sizing: border-box;
-      line-height: 40px;  
+      line-height: 1.2rem;  
       font-size: 1.0rem;  
       text-align: left; 
       resize: none;
