--- a/index.html
+++ b/index.html
@@ -4,44 +4,61 @@
   <meta charset="UTF-8">
   <title>Meme Finder</title>
   <style>
-    .container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    /* Remove default scrollbars, margin, and padding on body/html */
+    html, body {
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; /* hide unnecessary scrollbars if any */
+      font-family: Arial, Helvetica, sans-serif; /* consistent font for everything */
+    }
+
+    /* Main container takes full screen height,
+       but we shift contents slightly higher than exact center */
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      transform: translateY(-5%); /* shift content up a bit */
     }
 
     .wrapper {
       text-align: center;
     }
 
+    /* Header and placeholder share same font size */
     #sentence-form label {
       display: block;
-      font-size: 1.5rem;
-      margin-bottom: 1.2rem;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
     }
 
+    /* Single-line input with internal padding, responsive width */
     #input-sentence {
       display: block;
-      width: 600px;       
-      height: 40px;       
+      width: 90%;
+      max-width: 600px;
+      height: 40px;
       box-sizing: border-box;
-      line-height: 1.4rem;  
-      font-size: 1.0rem;  
-      text-align: left; 
+      padding: 0.5rem;
+      font-size: 1.2rem;
+      line-height: 1.2rem;
+      text-align: center;
       resize: none;
     }
 
+    /* Same font/size for placeholder, center alignment */
     #input-sentence::placeholder {
-      font-size: 1.0rem; 
-      text-align: left;
+      font-size: 1.2rem;
+      text-align: center;
     }
 
+    /* Basic button styling; slightly bigger text */
     #submit-btn {
-      font-size: 0.8rem;
-      margin-top: 1.4rem;
+      font-size: 1rem;
+      margin-top: 1.2rem;
       cursor: pointer;
     }
 
@@ -69,6 +86,7 @@
 
   <script>
     const BACKEND_URL = "https://nodejs-serverless-function-express-eight-navy.vercel.app/api/summarize-and-search.js";
+
     const sentenceForm = document.getElementById("sentence-form");
     const sentenceInput = document.getElementById("input-sentence");
     const memeResultDiv = document.getElementById("meme-result");
@@ -90,21 +108,25 @@
         return;
       }
       memeResultDiv.innerHTML = "<p>Loading...</p>";
+
       try {
         const response = await fetch(BACKEND_URL, {
           method: "POST",
           headers: { "Content-Type": "text/plain" },
           body: JSON.stringify({ userSentence })
         });
+
         if (!response.ok) {
           memeResultDiv.innerHTML = `<p>Request failed: ${response.status} ${response.statusText}</p>`;
           return;
         }
+
         const data = await response.json();
         if (data.error) {
           memeResultDiv.innerHTML = `<p>Error: ${data.error.message || data.error}</p>`;
           return;
         }
+
         sentenceForm.style.display = "none";
         const { imageUrl } = data;
         memeResultDiv.innerHTML = `<img src="${imageUrl}" alt="Meme Image" style="max-width: 400px;">`;
