--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     /* Same font/size for placeholder, center alignment */
     #input-sentence::placeholder {
-      font-size: 1.2rem;
-      text-align: center;
+      font-size: 1.0rem;
+      text-align: left;
     }
 
     /* Basic button styling; slightly bigger text */
