--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       padding: 0.5rem;
       font-size: 1.2rem;
       line-height: 1.2rem;
-      text-align: center;
+      text-align: left;
       resize: none;
     }
 
