--- a/index.html
+++ b/index.html
@@ -1,53 +1,122 @@
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <title>Meme Finder</title>
+  <style>
+    /* Remove default scrollbars, margin, and padding on body/html */
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; /* hide unnecessary scrollbars if any */
+      font-family: Arial, Helvetica, sans-serif; /* consistent font for everything */
+    }
+
+    /* Main container takes full screen height,
+       but we shift contents slightly higher than exact center */
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      transform: translateY(-5%); /* shift content up a bit */
+    }
+
+    .wrapper {
+      text-align: center;
+    }
+
+    /* Header and placeholder share same font size */
+    #sentence-form label {
+      display: block;
+      font-size: 1.8rem;
+      margin-bottom: 1.8rem;
+    }
+
+    /* Single-line input with internal padding, responsive width */
+    #input-sentence {
+      display: block;
+      width: 90%;
+      max-width: 600px;
+      height: 40px;
+      box-sizing: border-box;
+      padding: 0.5rem;
+      font-size: 1.0rem;
+      line-height: 1.0rem;
+      text-align: left;
+      resize: none;
+    }
+
+    /* Same font/size for placeholder, center alignment */
+    #input-sentence::placeholder {
+      font-size: 1.0rem;
+      text-align: left;
+    }
+
+    /* Basic button styling; slightly bigger text */
+    #submit-btn {
+      font-size: 1.0rem;
+      margin-top: 1.6rem;
+      cursor: pointer;
+    }
+
+    #meme-result {
+      margin-top: 1rem;
+    }
+  </style>
 </head>
 <body>
-
-  <!-- Minimal form (no extra CSS) -->
-  <form id="sentence-form">
-    <label for="input-sentence">Tell us about your day</label><br><br>
-    <textarea
-      id="input-sentence"
-      name="input-sentence"
-      rows="4"
-      placeholder="Example: I locked my keys in my car..."
-      required
-    ></textarea><br><br>
-
-    <button type="button" id="submit-btn">GENERATE</button>
-  </form>
-
-  <div id="meme-result"></div>
+  <div class="container">
+    <div class="wrapper">
+      <form id="sentence-form">
+        <label for="input-sentence">Tell us about your day!</label>
+        <textarea
+          id="input-sentence"
+          name="input-sentence"
+          placeholder="Ex: I locked my keys in my car..."
+          required
+        ></textarea>
+        <button type="button" id="submit-btn">Generate</button>
+      </form>
+      <div id="meme-result"></div>
+    </div>
+  </div>
 
   <script>
-    // Replace this URL with your actual Vercel serverless endpoint if needed
     const BACKEND_URL = "https://nodejs-serverless-function-express-eight-navy.vercel.app/api/summarize-and-search.js";
 
-    document.getElementById("submit-btn").addEventListener("click", async () => {
-      const sentenceForm = document.getElementById("sentence-form");
-      const sentenceInput = document.getElementById("input-sentence");
-      const memeResultDiv = document.getElementById("meme-result");
+    const sentenceForm = document.getElementById("sentence-form");
+    const sentenceInput = document.getElementById("input-sentence");
+    const memeResultDiv = document.getElementById("meme-result");
 
+    sentenceInput.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        generateMeme();
+      }
+    });
+
+    document.getElementById("submit-btn").addEventListener("click", generateMeme);
+
+    async function generateMeme() {
       memeResultDiv.innerHTML = "";
-
       const userSentence = sentenceInput.value.trim();
       if (!userSentence) {
         alert("Please enter something!");
         return;
       }
-
-      // Temporary "loading" message
       memeResultDiv.innerHTML = "<p>Loading...</p>";
 
       try {
         const response = await fetch(BACKEND_URL, {
           method: "POST",
-          headers: {
-            "Content-Type": "text/plain"
-          },
+          headers: { "Content-Type": "text/plain" },
           body: JSON.stringify({ userSentence })
         });
 
@@ -62,19 +131,13 @@
           return;
         }
 
-        // Hide the form upon success
         sentenceForm.style.display = "none";
-
         const { imageUrl } = data;
-        // Display the meme image only
-        memeResultDiv.innerHTML = `
-          <img src="${imageUrl}" alt="Meme Image">
-        `;
+        memeResultDiv.innerHTML = `<img src="${imageUrl}" alt="Meme Image" style="max-width: 400px;">`;
       } catch (err) {
-        console.error("Error:", err);
         memeResultDiv.innerHTML = `<p>An error occurred: ${err}</p>`;
       }
-    });
+    }
   </script>
 </body>
 </html>
