--- a/index.html
+++ b/index.html
@@ -1,67 +1,77 @@
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <title>Meme Finder</title>
   <style>
-    /* Remove default scrollbars, margin, and padding on body/html */
+    /* 
+      1) Removed overflow:hidden and forced height. 
+         Using min-height:100vh so content can expand if needed,
+         and no scrollbars get unnaturally hidden.
+    */
     html, body {
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100%;
-      overflow: hidden; /* hide unnecessary scrollbars if any */
-      font-family: Arial, Helvetica, sans-serif; /* consistent font for everything */
+      min-height: 100vh; 
+      font-family: Arial, Helvetica, sans-serif;
     }
 
-    /* Main container takes full screen height,
-       but we shift contents slightly higher than exact center */
+    /*
+      2) The container is now allowed to grow with content,
+         but we still center horizontally. 
+         We use padding-top to shift it slightly up from exact center 
+         instead of transform tricks, which can restrict layout width in some cases. 
+    */
     .container {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      transform: translateY(-15%); /* shift content up a bit */
+      justify-content: center; 
+      align-items: flex-start; /* align near top, not direct center */
+      padding-top: 5vh;       /* shift content ~5% down from top */
+      box-sizing: border-box;
     }
 
     .wrapper {
       text-align: center;
+      width: 100%;
+      max-width: 1200px; /* big container so we can have a wide text area */
+      margin: 0 auto;
     }
 
-    /* Header and placeholder share same font size */
     #sentence-form label {
       display: block;
-      font-size: 1.8rem;
+      font-size: 1.8rem; 
       margin-bottom: 1.8rem;
     }
 
-    /* Single-line input with internal padding, responsive width */
+    /*
+      3) For the textarea:
+         - width: 80vw so it can be wide on big screens
+         - max-width: 1000px so it doesn't exceed typical large sizes
+         - removed overflow/transform constraints
+         - The 'height: 40px' makes it a single line
+         - box-sizing + padding
+    */
     #input-sentence {
       display: block;
-      width: 90%;
-      max-width: 600px;
+      width: 80vw;    
+      max-width: 1000px; 
       height: 40px;
       box-sizing: border-box;
       padding: 0.5rem;
-      font-size: 1.0rem;
+      font-size: 1rem;
       line-height: 1.2rem;
-      text-align: left;
+      text-align: left; 
       resize: none;
     }
 
-    /* Same font/size for placeholder, center alignment */
     #input-sentence::placeholder {
-      font-size: 1.0rem;
+      font-size: 1rem;
       text-align: left;
     }
 
-    /* Basic button styling; slightly bigger text */
     #submit-btn {
-      font-size: 1.0rem;
+      font-size: 1rem;
       margin-top: 1.6rem;
       cursor: pointer;
     }
@@ -112,25 +122,21 @@
         return;
       }
       memeResultDiv.innerHTML = "<p>Loading...</p>";
-
       try {
         const response = await fetch(BACKEND_URL, {
           method: "POST",
           headers: { "Content-Type": "text/plain" },
           body: JSON.stringify({ userSentence })
         });
-
         if (!response.ok) {
           memeResultDiv.innerHTML = `<p>Request failed: ${response.status} ${response.statusText}</p>`;
           return;
         }
-
         const data = await response.json();
         if (data.error) {
           memeResultDiv.innerHTML = `<p>Error: ${data.error.message || data.error}</p>`;
           return;
         }
-
         sentenceForm.style.display = "none";
         const { imageUrl } = data;
         memeResultDiv.innerHTML = `<img src="${imageUrl}" alt="Meme Image" style="max-width: 400px;">`;
