--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     }
 
     #submit-btn {
-      font-size: 1rem;
+      font-size: 0.9rem;
       margin-top: 1.6rem;
       cursor: pointer;
     }
@@ -92,7 +92,7 @@
           placeholder="Ex: I locked my keys in my car..."
           required
         ></textarea>
-        <button type="button" id="submit-btn">Generate</button>
+        <button type="button" id="submit-btn">GENERATE</button>
       </form>
       <div id="meme-result"></div>
     </div>
