--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     .wrapper {
-      text-align: center;
+      text-align: left;
       width: 100%;
       max-width: 600px; /* big container so we can have a wide text area */
       margin: 0 auto;
