--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       padding: 0;
       width: 100%;
       min-height: 100vh; 
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: sans-serif;
     }
 
     /*
