--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <title>Meme Finder</title>
   <style>
-    /* 
-      1) Removed overflow:hidden and forced height. 
-         Using min-height:100vh so content can expand if needed,
-         and no scrollbars get unnaturally hidden.
-    */
+    
     html, body {
       margin: 0;
       padding: 0;
@@ -17,24 +13,18 @@
       font-family: sans-serif;
     }
 
-    /*
-      2) The container is now allowed to grow with content,
-         but we still center horizontally. 
-         We use padding-top to shift it slightly up from exact center 
-         instead of transform tricks, which can restrict layout width in some cases. 
-    */
     .container {
       display: flex;
       justify-content: center; 
-      align-items: flex-start; /* align near top, not direct center */
-      padding-top: 30vh;       /* shift content ~5% down from top */
+      align-items: flex-start; 
+      padding-top: 30vh;     
       box-sizing: border-box;
     }
 
     .wrapper {
       text-align: center;
       width: 100%;
-      max-width: 600px; /* big container so we can have a wide text area */
+      max-width: 600px; 
       margin: 0 auto;
     }
 
@@ -44,14 +34,6 @@
       margin-bottom: 1.8rem;
     }
 
-    /*
-      3) For the textarea:
-         - width: 80vw so it can be wide on big screens
-         - max-width: 1000px so it doesn't exceed typical large sizes
-         - removed overflow/transform constraints
-         - The 'height: 40px' makes it a single line
-         - box-sizing + padding
-    */
     #input-sentence {
       display: block;
       width: 60vw;    
@@ -61,9 +43,9 @@
       padding: 0.5rem;
       font-size: 1rem;
       line-height: 1.2rem;
-      text-align: left; /* 내부 텍스트는 왼쪽 정렬 */
+      text-align: left; 
       resize: none;
-      margin: 0 auto; /* 이 부분이 중요 */
+      margin: 0 auto;
     }
 
 
