--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Meme Finder</title>
+  <title>Meme Generator</title>
   <style>
     
     html, body {
